Align form elements correctly

--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -26,7 +26,6 @@ body {
     color: black;
 }
 
-/* We can target each part of the form with align-self. Might need to erase form styling entirely (see HTML notes) */
 form {
     display: flex;
     flex-direction: column; /* Need more than this */
@@ -54,26 +53,12 @@ section > p {
 
 section > div {
     display: flex;
-    justify-content: space-evenly;
-    margin-left: -38%;
+    justify-content: space-between;
+    max-width: 40%;
+    margin: 0;
     padding: 30px 0;
     gap: 1rem;
 }
-
-/* Old code
-section > div {
-    flex-flow: row wrap;
-    padding: 30px 0 30px;
-    gap: 8px;
-}
-
-.section-1,
-.section-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 2rem;
-} */
 
 label, input {
     display: block;
